<resources>
    <string name="app_name">APP_JOHN</string>
    <string name="primer_activity">Mi Primer Aplicación</string>
    <string name="call">Call</string>
    <string name="url">Google</string>
    <string name="alarma">Alarma</string>
    <string name="email">correo</string>
    <string name="google">Google</string>
    <string name="llamar">llamar</string>
    <string name="Email">Email</string>
    <string name="marcar">marcar</string>
    <string name="numero">623260768</string>
    <string name="alarm">Alarm</string>
    <string name="txtgoogle">Google</string>
    <string name="salir">Salir</string>
    <string name="login">login</string>
    <string name="texto">\"Truco o trato, la noche de las brujas ha llegado para hechizarte con diversion macabra.\"</string>
    <string name="tex_inicio">Clase PMPM 2023/2024</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registrate">¿No tienes Cuenta? Registrate</string>
    <string name="lo_hecho">" "</string> />
</resources>